--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "week-15-live-2.2",
+  "name": "learning-docker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,8 +13,10 @@
   "dependencies": {
     "@types/express": "^4.17.21",
     "@types/mongoose": "^5.11.97",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
+    "learning-docker": "file:",
     "mongoose": "^8.2.1",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.2",
+    "week-15-live-2.2": "file:"
   }
 }
